--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "google-maps-react": "^2.0.6",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
